[package]
name = "alfred-telegram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.12.2"
tokio = "1.37.0"
alfred-rs = { path = "../alfred-rs" }
env_logger = "0.11.3"
thiserror = "1.0.61"
